Added the wizardBlockFileExistCheck to check if a file exists or not
Added the store and restore functions in medVMEStent to save and load stent parameters

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -64,6 +64,9 @@ SET(PROJECT_SRCS
   
   medWizardBlockTypeCheck.cpp
   medWizardBlockTypeCheck.h
+
+  medWizardBlockFileExistCheck.cpp
+  medWizardBlockFileExistCheck.h
   
   medWizardBlockVMESelection.cpp
   medWizardBlockVMESelection.h
