Added medWizardblock for finding or selecting vmes

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -70,6 +70,9 @@ SET(PROJECT_SRCS
   
   medWizardBlockVMESelection.cpp
   medWizardBlockVMESelection.h
+
+  medWizardBlockVMEFindOrSelection.cpp
+  medWizardBlockVMEFindOrSelection.h
   
   medWizardBlockInformation.cpp
   medWizardBlockInformation.h
