Added interactor style which can have rotation disabled.

--- a/vtkMED/CMakeLists.txt
+++ b/vtkMED/CMakeLists.txt
@@ -44,6 +44,8 @@ SET(vtkMED_SRCS
   vtkMEDRegionGrowingLocalGlobalThreshold.h
   vtkMEDHalfTubeRemoval.cxx
   vtkMEDHalfTubeRemoval.h
+  vtkMEDInteractorStyleEnableRotation.cxx
+  vtkMEDInteractorStyleEnableRotation.h
   vtkMEDSubdividePolylines.cxx
   vtkMEDSubdividePolylines.h
   vtkMEDLandmarkCloudPolydataFilter.cxx
