Modifications required in order to build MAF2Medical with Visual Studio 2013, specifically:
1) Several CMakeLists.txt modified to specify CMAKE BACKWARD COMPATIBILITY to version 2.4 instead of 2.0. The reason for this modification: CMake 3.x is required to create VS 2013 solution but CMake 3.x does not backward compatibility with versions prior 2.4, hence CMake fails when processing CMakeLists.txt with CMAKE BACKWARD COMPATIBILITY set to 2.0 (or 2.0.6) as it was.

+ include VS 2013 into list of CMAKE_GENERATORs requiring NO_MANIFEST, and some modified to copy app.ico into the correct directory

+ Main CMakeList.txt modified to enable parallel compilation (supported by VS 2012+)

2) At several places, non-standard construction to check if opening file/reading from a file via STL has succeeded was used, e.g., if ( this->IFile->read(result, 80) == 0). This was replaced to use standard way by calling the method fail(), .e.g., if ( this->IFile->read(result, 80).fail())

3) Functions std::min and std:max used in a couple of files are defined in STL algorithm file, which was not included (probably it was previously included by other file included, but this is no longer the case with VS 2013). Hence, <algorithm> was included whenever needed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@
 # Description:
 # CMake Project file for the Medical Library.
 
-SET (CMAKE_BACKWARDS_COMPATIBILITY "2.0" CACHE INSTERNAL "This project is for CMake 2.0")
-CMAKE_MINIMUM_REQUIRED(VERSION 2.0) 
+#SET (CMAKE_BACKWARDS_COMPATIBILITY "2.4" CACHE INSTERNAL "This project is for CMake 2.4")
+CMAKE_MINIMUM_REQUIRED(VERSION 2.4) 
 
 PROJECT (MED)
 
@@ -43,6 +43,20 @@ IF(WIN32)
       SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /YX" CACHE STRING "Compiler flags")
   ENDIF (NOT UNIX)
 ENDIF(WIN32)
+
+#-----------------------------------------------------------------------------
+# This enables support for Visual Studio Edit & Continue, OpenMP, and parallel compilation
+#-----------------------------------------------------------------------------
+IF (${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
+	#Add OpenMP Support
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /openmp")
+
+	#Add support for Edit & Continue
+	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /ZI")
+	IF (NOT ${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS 17.0)
+		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+	ENDIF (NOT ${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS 17.0)
+ENDIF (${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
 
 #-----------------------------------------------------------------------------
 # Options for MAF building
