Changes in oder to build MAF2 automatically both on X86 and X64 machines

--- a/Examples/exVMEMan/CMakeLists.txt
+++ b/Examples/exVMEMan/CMakeLists.txt
@@ -39,4 +39,7 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
 
 IF (WIN32)
   SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/MANIFEST")
+  IF(${CMAKE_GENERATOR} STREQUAL "Visual Studio 10 Win64")
+    SET_PROPERTY(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY LINK_FLAGS " /INCREMENTAL:NO")
+  ENDIF(${CMAKE_GENERATOR} STREQUAL "Visual Studio 10 Win64")
 ENDIF (WIN32)
