--- a/Examples/exOperations/CMakeLists.txt
+++ b/Examples/exOperations/CMakeLists.txt
@@ -43,8 +43,12 @@ ELSE (MAF_BUILD_MAFDLL)
 ENDIF(MAF_BUILD_MAFDLL)
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
+
 IF (WIN32)
   SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/MANIFEST")
+  IF(${CMAKE_GENERATOR} STREQUAL "Visual Studio 10 Win64")
+    SET_PROPERTY(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY LINK_FLAGS " /INCREMENTAL:NO")
+  ENDIF(${CMAKE_GENERATOR} STREQUAL "Visual Studio 10 Win64")
 ENDIF (WIN32)
 
 #####################################################################################
