--- a/Gui/CMakeLists.txt
+++ b/Gui/CMakeLists.txt
@@ -130,6 +130,28 @@ SET(PROJECT_SRCS
   mafGUIComboBox.h
   mafGUISettingsHelp.h
   mafGUISettingsHelp.cpp
+  medGUILandmark.cpp
+  medGUILandmark.h
+  medGUIWizard.cpp
+  medGUIWizard.h
+  medGUIWizardPage.cpp
+  medGUIWizardPage.h
+  medGUIWizardPageNew.cpp
+  medGUIWizardPageNew.h
+  medGUIDicomSettings.cpp
+  medGUIDicomSettings.h
+  # medGUIContextualMenu.cpp
+  # medGUIContextualMenu.h
+  medGUISettingsAdvanced.cpp
+  medGUISettingsAdvanced.h
+  medGUIDynamicVP.cpp
+  medGUIDynamicVP.h
+  medGUILutHistogramSwatch.cpp
+  medGUILutHistogramSwatch.h
+  medGUILutHistogramEditor.cpp
+  medGUILutHistogramEditor.h
+  medGUIMDIFrame.cpp
+  medGUIMDIFrame.h
 )
 
 IF (MAF_USE_CURL)
