--- a/VME/CMakeLists.txt
+++ b/VME/CMakeLists.txt
@@ -46,6 +46,142 @@ SET(PROJECT_SRCS
   mafVMEOutputScalar.h
   mafVMEScalar.cpp
   mafVMEScalar.h
+  ###############
+  medVMEFactory.cpp 
+  medVMEFactory.h
+  medVMELabeledVolume.cpp
+  medVMELabeledVolume.h
+  medPipeFactoryVME.cpp
+  medPipeFactoryVME.h
+
+  medPipeVolumeMIP.cpp
+  medPipeVolumeMIP.h
+  medPipeDensityDistance.cpp
+  medPipeDensityDistance.h
+  medPipeTrajectories.cpp
+  medPipeTrajectories.h
+  medPipeVolumeDRR.cpp
+  medPipeVolumeDRR.h
+  medPipeVolumeVR.cpp
+  medPipeVolumeVR.h
+
+  # mafPolylineGraph.cpp
+  # mafPolylineGraph.h
+  medVMEPolylineGraph.cpp
+  medVMEPolylineGraph.h
+  medVMEPolylineEditor.cpp
+  medVMEPolylineEditor.h
+  medPipePolylineGraphEditor.cpp
+  medPipePolylineGraphEditor.h
+  medVMEOutputPolylineEditor.cpp
+  medVMEOutputPolylineEditor.h
+  medVMEMaps.cpp
+  medVMEMaps.h
+  
+  medVMEWrappedMeter.cpp
+  medVMEWrappedMeter.h
+  medVMEOutputWrappedMeter.cpp
+  medVMEOutputWrappedMeter.h
+  medPipeWrappedMeter.cpp
+  medPipeWrappedMeter.h
+
+  medVMESurfaceEditor.cpp
+  medVMESurfaceEditor.h
+  medPipeSurfaceEditor.cpp
+  medPipeSurfaceEditor.h
+  medVMEOutputSurfaceEditor.cpp
+  medVMEOutputSurfaceEditor.h
+  
+  medVisualPipeSlicerSlice.cpp
+  medVisualPipeSlicerSlice.h
+  
+  medVisualPipePolylineGraph.cpp
+  medVisualPipePolylineGraph.h
+
+  medVMEComputeWrapping.h
+  medVMEComputeWrapping.cpp
+  medPipeComputeWrapping.h
+  medPipeComputeWrapping.cpp
+  medVMEOutputComputeWrapping.cpp
+  medVMEOutputComputeWrapping.h 
+  
+  medPipeVectorField.cpp
+  medPipeVectorField.h
+  medPipeVectorFieldMapWithArrows.cpp
+  medPipeVectorFieldMapWithArrows.h
+  medPipeVectorFieldGlyphs.cpp
+  medPipeVectorFieldGlyphs.h
+  medPipeVectorFieldSurface.cpp
+  medPipeVectorFieldSurface.h
+  medPipeVectorFieldSlice.cpp
+  medPipeVectorFieldSlice.h
+  medPipeTensorField.cpp
+  medPipeTensorField.h
+  medPipeTensorFieldGlyphs.cpp
+  medPipeTensorFieldGlyphs.h
+  medPipeTensorFieldSurface.cpp
+  medPipeTensorFieldSurface.h
+  medPipeTensorFieldSlice.cpp
+  medPipeTensorFieldSlice.h
+  medPipeCompound.cpp
+  medPipeCompound.h
+  medPipeCompoundVolume.cpp
+  medPipeCompoundVolume.h
+  medPipeCompoundVolumeFixedScalars.cpp
+  medPipeCompoundVolumeFixedScalars.h
+  medVMESegmentationVolume.cpp
+  medVMESegmentationVolume.h
+  medDataPipeCustomSegmentationVolume.cpp
+  medDataPipeCustomSegmentationVolume.h
+  medAttributeSegmentationVolume.cpp
+  medAttributeSegmentationVolume.h
+  
+  
+  ### TO BE COMMITTED DOWN ###
+  mafPipeSlice.cpp
+  mafPipeSlice.h
+  ############################
+  
+  mafGizmoROI_BES.cpp
+  mafGizmoROI_BES.h
+  mafPipeMeshSlice_BES.cpp
+  mafPipeMeshSlice_BES.h
+  mafPipePolylineSlice_BES.cpp
+  mafPipePolylineSlice_BES.h
+  mafPipeSurfaceSlice_BES.cpp
+  mafPipeSurfaceSlice_BES.h
+  mafPipeVolumeSlice_BES.cpp
+  mafPipeVolumeSlice_BES.h
+  
+  ############# VolumeLarge Files - TO BE COMMITTED DOWN ########
+  # the following files has been moved to mafIO
+  #../BES_Beta/IO/mafBrickedFile.cpp    
+  #../BES_Beta/IO/mafBrickedFile.h
+  #../BES_Beta/IO/mafBrickedFileReader.cpp
+  #../BES_Beta/IO/mafBrickedFileReader.h
+  #../BES_Beta/IO/mafBrickedFileWriter.cpp
+  #../BES_Beta/IO/mafBrickedFileWriter.h
+  #../BES_Beta/IO/mafVolumeLargeReader.cpp
+  #../BES_Beta/IO/mafVolumeLargeReader.h
+  #../BES_Beta/IO/mafVolumeLargeWriter.cpp
+  #../BES_Beta/IO/mafVolumeLargeWriter.h
+  mafVMEVolumeLarge.cpp
+  mafVMEVolumeLarge.h
+  mafVMEVolumeLargeUtils.cpp
+  mafVMEVolumeLargeUtils.h  
+  ###############################################################
+
+  medPipeVolumeSliceBlend.cpp
+  medPipeVolumeSliceBlend.h
+
+  medVisualPipeCollisionDetection.cpp
+  medVisualPipeCollisionDetection.h
+
+  medPipeVolumeSliceNotInterpolated.cpp
+  medPipeVolumeSliceNotInterpolated.h
+  
+  medPipeRayCast.cpp
+  medPipeRayCast.h
 )
 
 IF (MAF_USE_CRYPTO)
@@ -157,6 +293,21 @@ IF (MAF_USE_VTK)
   mafVMEVolumeRGB.h
   mmaMeter.cpp
   mmaMeter.h
+  ###########
+  mafVMERawMotionData.cpp
+  mafVMERawMotionData.h
+  medPipeGraph.cpp
+  medPipeGraph.h
+  medVMEAnalog.cpp
+  medVMEAnalog.h
+  
+ #add for stent
+  medVMEStent.cpp
+  medVMEStent.h
+
+  #stent used tool, to find nearest point
+  kdtree.c
+  kdtree.h
   )
 ENDIF (MAF_USE_VTK)
 
