--- a/Common/medCommonDefines.h.in
+++ b/Common/medCommonDefines.h.in
@@ -1,7 +1,7 @@
 #ifndef __medCommonDefines_h
 #define __medCommonDefines_h
 
-#if @MED_BUILD_MEDDLL@
+#if @MAF_BUILD_MAFDLL@
 # define MED_SHARED
 #endif
 
