--- a/Operations/medOperationsDefines.h.in
+++ b/Operations/medOperationsDefines.h.in
@@ -1,7 +1,7 @@
 #ifndef __medOperationsDefines_h
 #define __medOperationsDefines_h
 
-#if @MED_BUILD_MEDDLL@
+#if @MAF_BUILD_MAFDLL@
 # define MED_SHARED
 #endif
 
