--- a/VME/medVMEDefines.h.in
+++ b/VME/medVMEDefines.h.in
@@ -1,7 +1,7 @@
 #ifndef __medVMEDefines_h
 #define __medVMEDefines_h
 
-#if @MED_BUILD_MEDDLL@
+#if @MAF_BUILD_MAFDLL@
 # define MED_SHARED
 #endif
 
