--- a/Views/CMakeLists.txt
+++ b/Views/CMakeLists.txt
@@ -66,16 +66,16 @@ SET(PROJECT_LIBS mafVME mafInteraction mafCore)
 
 SET(PROJECT_LIBS ${PROJECT_LIBS} vtkMED)
 
-IF(MED_BUILD_MEDDLL)
+IF(MAF_BUILD_MAFDLL)
   SET(BUILD_SHARED_LIBS 1)
   ADD_DEFINITIONS(-DMED_VIEWS_EXPORTS)
   # Create the library.
   ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SRCS})
-  TARGET_LINK_LIBRARIES(${PROJECT_NAME} mafDLL vtkMED medCommon medVME medInteraction)
-ELSE(MED_BUILD_MEDDLL)
+  TARGET_LINK_LIBRARIES(${PROJECT_NAME} mafDLL vtkMED medCommon mafVME mafInteraction)
+ELSE(MAF_BUILD_MAFDLL)
   # Create the library.
   ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SRCS})
   TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
-ENDIF (MED_BUILD_MEDDLL)
+ENDIF(MAF_BUILD_MAFDLL)
 
-ADD_DEPENDENCIES(${PROJECT_NAME} medCommon medVME medInteraction)
+ADD_DEPENDENCIES(${PROJECT_NAME} medCommon mafVME mafInteraction)
