Set stack size to 10 MB for cmake version greater than 2.8.11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,15 @@ ENDIF (CMAKE_VERSION VERSION_LESS 2.8)
 
 PROJECT (MAF)
 
+IF(MSVC AND NOT (${CMAKE_VERSION} VERSION_LESS 2.8.11))
+		# set stack reserved size to ~10MB
+		# CMake previously automatically set this value for MSVC builds, but the
+		# behavior was changed in CMake 2.8.11 (Issue 12437) to use the MSVC default
+		# value (1 MB) which is not enough for us. Test medOpExporterGRFWSTest fails 
+		# due to stackoverflow 
+		SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /STACK:10000000")
+ENDIF()
+
 #-----------------------------------------------------------------------------
 # Macro for DEBUG logging
 #-----------------------------------------------------------------------------
