Moved mafcommon files into a more appropriate folder

--- a/Base/CMakeLists.txt
+++ b/Base/CMakeLists.txt
@@ -12,6 +12,9 @@ SET(PROJECT_SRCS
 mafBase.h
 mafDecl.cpp
 mafDecl.h
+medDecl.h
+mafDbg.h
+mafDataChecksum.h
 mafDefines.cpp
 mafDefines.h
 mafDirectory.cpp
@@ -35,6 +38,8 @@ mafMatrix.cpp
 mafMatrix.h
 mafMatrix3x3.cpp
 mafMatrix3x3.h
+medVect3d.cpp
+medVect3d.h
 mafMultiThreader.h
 mafMultiThreader.cpp
 mafMutexLock.cpp
